# profile_file

./: bashrc  gitconfig  shadowsocks.json  software.txt  vimrc
cheatsheet/: GFW  catkin_build  cmake  docker  foo  gif  git  ip_config  network  ros  ros-eclipse  rosbag  update
scripts/: reducepdf.sh
test/bash_test/: hello.txt  myfiles.ls  results  world
test/cmake_test/t2/: CMakeLists.txt
test/cmake_test/t2/doc/: CMakeLists.txt  hello.txt
test/cmake_test/t2/src/: main.c
test/cmake_test/t3/lib/: CMakeLists.txt
test/opencv_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test  test.cpp
test/pytest/: test.py
test/quickstart_ws/.catkin_tools/profiles/hello_test/: config.yaml
test/quickstart_ws/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
test/quickstart_ws/devel/.private/beginner_tutorials/: .catkin  .rosinstall  setup.sh
test/quickstart_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
test/quickstart_ws/devel/.private/fake_ar_publisher/: .catkin  .rosinstall  _setup_util.py  setup.sh
test/quickstart_ws/devel/.private/hello_test/: .rosinstall  setup.sh
test/quickstart_ws/devel/.private/pkg_a/: .catkin  (+2 more)
test/quickstart_ws/logs/hello_test/: build.cmake.002.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr
test/quickstart_ws/src/beginner_tutorials/: CMakeLists.txt
test/quickstart_ws/src/hello_test/: CMakeLists.txt
test/quickstart_ws/src/pkg_a/: CMakeLists.txt
test/quickstart_ws/src/pkg_b/: package.xml
test/quickstart_ws/src/pkg_d/: package.xml
(+146 files in other folders)
